--- a/login.css
+++ b/login.css
@@ -1,5 +1,5 @@
 .login {
-    background-image: url("imagens/carroscapa.jpg");
+    background-image: url("imagens/Carroscapa.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
